# v2eaudio

./: README.md
v2SpeechEnhancer/: CMakeLists.txt  MIGRATION_NOTES_IDF5.3_ADFmaster.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.old
v2SpeechEnhancer/components/is31fl3216_custom/: CMakeLists.txt  is31fl3216_custom.c
v2SpeechEnhancer/components/is31fl3216_custom/include/: is31fl3216_custom.h
v2SpeechEnhancer/components/my_board/: CMakeLists.txt  idf_component.yml
v2SpeechEnhancer/components/my_board/my_board_v1_0/: board.c
v2SpeechEnhancer/main/: CMakeLists.txt  main - Copy (2).c  main - Copy.c  main.c  twolf_control.srec
